*** Facebook Ads Extension For Magento Changelog ***

2018-08-10 version 2.6.0
- Introduce Debug Mode
- Fix AddToCart product matching error.

2018-06-01 version 2.5.0
- UI Redesign.
- UI reset when settings are deleted via popup.
- Added Messenger Chat support (Beta).

2018-04-20 version 2.4.2
- FB Shop creation is enabled for all setups by default.
- Remove un-needed debugging code.

2018-03-27 version 2.4.1
- De-Dup Multiple IDs in Feed File.
- Replace substr/strlen with mb_substr/mb_strlen. Fixes blank screen issue.
  * Thanks @mpalasis and @punkstar
- Fix PHP warning in #34
  * Thanks @tiltedlistener

2018-03-12 version 2.4.0
- Add automatic FB Shop creation as an advanced option available during setup.

2017-12-14 version 2.3.6
- Blank Screen Fix : Detect case where currency conversion rate is undefined.
- Include ACL Permissions (Thanks @WaPoNe!)

2017-12-07 version 2.3.5
- Fix memory leak.
- New method of loading store specific products.

2017-11-03 version 2.3.4
- Use 'Gender' attribute in feed, if it exists. Added by @tahoff
- Link to new ads creation interface. Added by @mengyingdu

2017-09-22 version 2.3.2
- Bundled Products price is now exported with Tax, if applicable.

2017-09-13 version 2.3.1
- Fix a crash that occurs if a two versions of this plugin are installed at
  once. Add a warning message with resolution steps.

2017-09-11 version 2.3.0
  - Open source & move to github.

2017-07-25 version 2.2.x
  - Add support for store/storeview selection.
  - Add option for using Advanced Matching with the Facebook Pixel
  - Fix issues with special characters in product urls.