@@ -29,6 +29,7 @@ window.facebookAdsExtensionAjax = {
  ,generateFeedNow: '<?php echo $this->getFeedGenerateNowAjaxRoute() ?>'
  ,setMsgerChatSetup: '<?php echo $this->getMsgerChatSetupAjaxRoute() ?>'
  ,debug: '<?php echo $this->getDebugRoute() ?>'
+ ,upgrade: '<?php echo $this->getUpgradeAjaxRoute() ?>'
 };
 </script>
 
